# thirdTask

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
orders/: models.py
products/: models.py  views.py
reviews/: models.py
